[package]
name = "pinger"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
tokio-rustls = "0.26"
webpki-roots = "1.0.2"
reqwest = { git = "https://github.com/ArArgon/reqwest" }
hickory-resolver = "0.25"
prometheus-client = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.4"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
